--- a/PrusaResearch/2.3.0.ini
+++ b/PrusaResearch/2.3.0.ini
@@ -7812,7 +7812,8 @@ filament_travel_max_lift = 0.6
 filament_travel_slope = 1
 filament_infill_max_speed = 0
 filament_infill_max_crossing_speed = 0
-cooling_slowdown_logic = preserve_perimeters
+cooling_slowdown_logic = consistent_surface
+
 cooling_perimeter_transition_distance = 10
 
 ## MMU3 parameters
@@ -7879,7 +7880,8 @@ filament_travel_ramping_lift = 1
 filament_travel_max_lift = 0.6
 filament_travel_slope = 1
 slowdown_below_layer_time = 10
-cooling_slowdown_logic = preserve_perimeters
+cooling_slowdown_logic = consistent_surface
+
 cooling_perimeter_transition_distance = 10
 
 [filament:*PLA06XL*]
@@ -7910,7 +7912,8 @@ filament_retract_length_toolchange = 20
 filament_travel_ramping_lift = 1
 filament_travel_max_lift = 1.5
 filament_travel_slope = 1
-cooling_slowdown_logic = preserve_perimeters
+cooling_slowdown_logic = consistent_surface
+
 cooling_perimeter_transition_distance = 10
 
 [filament:*PA_PLAHF*]
@@ -8097,7 +8100,8 @@ filament_travel_max_lift = 1.5
 filament_travel_slope = 1
 filament_infill_max_speed = 0
 filament_infill_max_crossing_speed = 110
-cooling_slowdown_logic = preserve_perimeters
+cooling_slowdown_logic = consistent_surface
+
 cooling_perimeter_transition_distance = 10
 
 ## MMU3 parameters
@@ -8462,7 +8466,8 @@ start_filament_gcode = "{if printer_notes!~/.*(MK4IS|XLIS|MK4S|MK3.9S|COREONE).*
 idle_temperature = 100
 filament_infill_max_speed = 0
 filament_infill_max_crossing_speed = 140
-cooling_slowdown_logic = preserve_perimeters
+cooling_slowdown_logic = consistent_surface
+
 cooling_perimeter_transition_distance = 10
 
 ## MMU3 parameters
@@ -8524,7 +8529,8 @@ filament_retract_length_toolchange = 20
 filament_travel_ramping_lift = 1
 filament_travel_max_lift = 1.5
 filament_travel_slope = 1
-cooling_slowdown_logic = preserve_perimeters
+cooling_slowdown_logic = consistent_surface
+
 cooling_perimeter_transition_distance = 10
 
 [filament:*ABS06XL*]
@@ -8639,7 +8645,8 @@ filament_minimal_purge_on_wipe_tower = 35
 filament_infill_max_speed = 0
 filament_infill_max_crossing_speed = 100
 compatible_printers_condition = printer_model=~/(MK4|MK4IS|MK4ISMMU3|MK3.9|MK3.9MMU3)/ and nozzle_diameter[0]!=0.6 and nozzle_diameter[0]!=0.8 and ! single_extruder_multi_material and ! nozzle_high_flow[0]
-cooling_slowdown_logic = preserve_perimeters
+cooling_slowdown_logic = consistent_surface
+
 cooling_perimeter_transition_distance = 10
 
 ## MMU3 parameters
@@ -8718,7 +8725,8 @@ filament_retract_length_toolchange = 20
 filament_travel_ramping_lift = 1
 filament_travel_max_lift = 1.5
 filament_travel_slope = 1
-cooling_slowdown_logic = preserve_perimeters
+cooling_slowdown_logic = consistent_surface
+
 cooling_perimeter_transition_distance = 10
 
 [filament:*PC06XL*]
@@ -8828,7 +8836,8 @@ start_filament_gcode = "{if printer_notes!~/.*(MK4IS|XLIS|MK4S|MK3.9S|COREONE).*
 idle_temperature = 150
 filament_minimal_purge_on_wipe_tower = 35
 compatible_printers_condition = printer_model=~/(MK4|MK4IS|MK4ISMMU3|MK3.9|MK3.9MMU3)/ and nozzle_diameter[0]!=0.6 and nozzle_diameter[0]!=0.8 and ! single_extruder_multi_material
-cooling_slowdown_logic = preserve_perimeters
+cooling_slowdown_logic = consistent_surface
+
 cooling_perimeter_transition_distance = 10
 
 [filament:*PA06PG*]
@@ -8871,7 +8880,8 @@ filament_retract_length_toolchange = 20
 filament_travel_ramping_lift = 1
 filament_travel_max_lift = 1.5
 filament_travel_slope = 1
-cooling_slowdown_logic = preserve_perimeters
+cooling_slowdown_logic = consistent_surface
+
 cooling_perimeter_transition_distance = 10
 
 [filament:*PA06XL*]
@@ -9028,7 +9038,8 @@ compatible_printers_condition = printer_model=~/.*XL.*/ and nozzle_diameter[0]==
 [filament:*PPPG*]
 inherits = *FLEXPG*
 compatible_printers_condition = printer_model=~/(MK4|MK4IS|MK4ISMMU3|MK3.9|MK3.9MMU3)/ and nozzle_diameter[0]>=0.3 and nozzle_diameter[0]!=0.6 and nozzle_diameter[0]!=0.8 and ! single_extruder_multi_material
-cooling_slowdown_logic = preserve_perimeters
+cooling_slowdown_logic = consistent_surface
+
 cooling_perimeter_transition_distance = 10
 
 [filament:*PP06PG*]
