--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -4,6 +4,9 @@ on:
     branches:
       - main
 
+permissions:
+  contents: write
+
 jobs:
   fetch-and-release:
     runs-on: ubuntu-latest
@@ -12,9 +15,9 @@ jobs:
         uses: actions/checkout@v4
       
       - name: Set up Python
-        uses: actions/setup-python@v4
+        uses: actions/setup-python@v5
         with:
-          python-version: '3.x'
+          python-version: 3.x
       
       - name: Build release
         run: |
@@ -50,7 +53,7 @@ jobs:
           retention-days: 7
 
       - name: Create release
-        uses: softprops/action-gh-release@v1
+        uses: softprops/action-gh-release@v2
         with:
           tag_name: v${{ steps.version.outputs.version }}
           name: Smartbox PrusaSlicer Bundle v${{ steps.version.outputs.version }}
